// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should render with error styles 1`] = `
.circuit-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.circuit-1 {
  width: 100%;
}

.circuit-0 {
  display: block;
  margin-right: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: #D23F47;
}

<div
  class="circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zM9.493 8.079a1 1 0 10-1.414 1.414L10.586 12l-2.507 2.507a1 1 0 101.414 1.414L12 13.414l2.507 2.507a1 1 0 001.414-1.414L13.414 12l2.507-2.507a1 1 0 00-1.414-1.414L12 10.586 9.493 8.079z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <div
    class="circuit-1"
  >
    <p>
      This is a notification.
    </p>
  </div>
</div>
`;

exports[`Notification should render with success styles 1`] = `
.circuit-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.circuit-0 {
  display: block;
  margin-right: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: #138849;
}

.circuit-1 {
  width: 100%;
}

<div
  class="circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-5.322-2.549a1 1 0 00-1.562-1.249l-4.444 5.556-1.782-1.781a1 1 0 00-1.414 1.414l2.571 2.571a1 1 0 001.488-.082l5.143-6.429z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <div
    class="circuit-1"
  >
    <p>
      This is a notification.
    </p>
  </div>
</div>
`;

exports[`Notification should render with warning styles 1`] = `
.circuit-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.circuit-1 {
  width: 100%;
}

.circuit-0 {
  display: block;
  margin-right: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: #F5C625;
}

<div
  class="circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-9-5.143a1 1 0 10-2 0v5.786a1 1 0 102 0V6.857zm0 9.643a1 1 0 10-2 0v.643a1 1 0 102 0V16.5z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <div
    class="circuit-1"
  >
    <p>
      This is a notification.
    </p>
  </div>
</div>
`;
